# pyRPCInDaemon

./: .gitignore  README.md  example.ipynb  heavy_task.py  profiler.py  pyproject.toml
rpcindaemon/: __init__.py  daemonize.py  entry.py  exceptions.py  rpcserver.py  task.py
rpcindaemon/daemoniker/: _daemonize_windows.py  _daemonize_windows_main.py  _signals_windows.py  _signals_windows_main.py
tests/: conftest.py  heavy_multiprocess_task.py  heavy_task.py  heavy_task_with_signals.py  heavy_task_with_tcp.py  test_batch_terminate.py  test_heavy_multiprocess_task.py  test_heavy_task.py  test_heavy_task_with_tcp.py  test_rpcindaemon.py  test_signal_handlers.py
